# vim_c_mini

./: .vimrc  CMakeLists.txt  README.md  main.c
